--- a/k8s-specifications/redis-deployment.yaml
+++ b/k8s-specifications/redis-deployment.yaml
@@ -26,4 +26,6 @@ spec:
           name: redis-data
       volumes:
       - name: redis-data
+        persistentVolumeClaim:
+        claimName: "redis-vote"
         emptyDir: {} 
