--- a/k8s-specifications/vote-deployment.yaml
+++ b/k8s-specifications/vote-deployment.yaml
@@ -16,8 +16,8 @@ spec:
         app: vote
     spec:
       containers:
-      - image: dockersamples/examplevotingapp_vote:before
+      - image: phuxfu/vote:1.0
         name: vote
         ports:
-        - containerPort: 80
+        - containerPort: 8080
           name: vote
