--- a/k8s-specifications/result-deployment.yaml
+++ b/k8s-specifications/result-deployment.yaml
@@ -16,8 +16,8 @@ spec:
         app: result
     spec:
       containers:
-      - image: dockersamples/examplevotingapp_result:before
+      - image: phuxfu/result:1.0
         name: result
         ports:
-        - containerPort: 80
+        - containerPort: 8080
           name: result
